// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppX 1`] = `
Object {
  "win": Array [
    Object {
      "arch": 0,
      "file": "Test App ßW-1.1.0-ia32.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;

exports[`languages 1`] = `
Object {
  "win": Array [
    Object {
      "arch": 1,
      "file": "Test App ßW-1.1.0.appx",
      "safeArtifactName": "TestApp-1.1.0.appx",
    },
  ],
}
`;
